# Simulon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hatch_build.py  pyproject.toml
astra-sim-alibabacloud/inputs/: ratio
csrc/: astra-sim-build.sh  bindings.cpp
csrc/astra-sim/system/: Sys.cc  calbusbw.h
csrc/astra-sim/workload/: Workload.cc
csrc/astra_bindings/: analytical_runner.cc  analytical_runner.hh  ns3_runner.hh  sim_runner.hh  topology_bridge.cc  topology_bridge.hh  workload_bridge.cc  workload_bridge.hh
csrc/ns3/: README.md
docs/: astra_integration.md
docs/spec/: config-dc.md  config-scenario.md  config-workload.md
examples/: deepseek_v3_training.yaml  qwen3_30b_training.yaml  run_simulation.py  scenario.yaml  scenario_96gpu.yaml
jobs/: profile_h100.sh
scripts/: profile_h100.sh
src/simulon/backend/: __init__.py  analytical.py  astra_runner.py  astra_sim.py  base.py  ns3.py
src/simulon/backend/astra_converter/: __init__.py  cpp_bridge.py  file_writer.py  topology.py  workload.py
src/simulon/backend/dag/: __init__.py  _progress.py  cache.py  chrome_trace.py  layer_expander.py  megatron_tracer.py  nodes.py  pipeline.py  populate.py  replayer.py  tracer.py
src/simulon/cli/: __init__.py  install.py
src/simulon/collective/: __init__.py  collnet.py  common.py  decompose.py  nvls.py  ring.py  tree.py
src/simulon/config/: common.py  dc.py  scenario.py  workload.py
src/simulon/profiling/: kernels.py  lookup.py  models.py  sweep.py
src/simulon/workload/: __init__.py  megatron.py  trace.py
templates/gpu/: h100.yaml  mock-h100.yaml
templates/model/: deepseek-v3.yaml  llama-3-70b.yaml  llama-7b.yaml  qwen3-235b-a22b.yaml  qwen3-30b-a3b.yaml
tests/: test_chrome_trace.py  test_cli_profile.py  test_collective.py  test_compact.py  test_converters.py  test_cpp_bindings.py  test_dag.py  test_dag_cache.py  test_e2e.py  test_kernels.py  test_legacy_compare.py  test_lookup.py  test_megatron.py  test_models.py  test_moe.py  test_replayer.py  test_scenario.py  test_step.py  test_sweep.py
tests/python/: test_astra_backend.py  test_astra_converter.py  test_astra_converter_simple.py  test_astra_e2e.py  test_astra_integration.py  test_scenario_serialization.py
tests/workload/: test_megatron.py
workload_inputs/: temp_93446.txt
