[build-system]
requires = ["hatchling", "pybind11>=2.12", "cmake", "ninja"]
build-backend = "hatchling.build"

[project]
name = "simulon"
version = "0.1.0"
description = "AI cluster simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
simulon = "simulon.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/simulon"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
