[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simulon"
version = "0.1.0"
description = "AI cluster simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
simulon = "simulon.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/simulon"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
profiling = ["torch"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
